--- a/EnhancePointerPrecisionToggler/EnhancePointerPrecisionToggler.csproj
+++ b/EnhancePointerPrecisionToggler/EnhancePointerPrecisionToggler.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>mouse2.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -101,6 +104,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\mouse-red.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="RawImages\mouse-green.png" />
+    <Resource Include="RawImages\mouse-red.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mouse.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="RawImages\mouse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mouse2.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="RawImages\mouse2.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
